--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ progress[value]::-webkit-progress-value {
 	   -webkit-linear-gradient(top, 
 	                           rgba(255, 255, 255, .25), 
 	                           rgba(0, 0, 0, .25)),
-	   -webkit-linear-gradient(left, #ffff00, #f44);
+	   -webkit-linear-gradient(left, rgb(255, 255, 0, 0), yellow, yellow, orange, #f44, red, purple);
 
     border-radius: 2px; 
     background-size: 35px 20px, 100% 100%, 100% 100%;
