--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ progress[value]::-webkit-progress-value {
 
 }
 
+a {
+  text-decoration: none;
+}
+
+
 
 .bored-bar {
   width: 80vw;
@@ -119,6 +124,15 @@ grid-template-areas:
   grid-area: nav;
   background-color: rgb(123, 63, 0);
   text-align: right;
+}
+
+.navBox {
+  margin: 11px 0;
+}
+.navBox > a {
+  padding: 0 30px 0 0;
+  color: white;
+  font-weight: 700;
 }
 
 /*********************************************************************************************************/
