modal with link to next prompt

--- a/src/index.css
+++ b/src/index.css
@@ -135,6 +135,19 @@ grid-template-areas:
   font-weight: 700;
 }
 
+.modal {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0,0,0,.5)
+}
+.modal > div {
+  width: 60vw;
+  margin: 20vw;
+  background-color: white;
+}
+
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           GRID            ***************************************/
