--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,8 @@ grid-template-areas:
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
+  z-index: 100;
   top: 0;
   width: 100vw;
   height: 100vh;
@@ -144,8 +145,10 @@ grid-template-areas:
 }
 .modal > div {
   width: 60vw;
-  margin: 20vw;
+  min-width: 200px;
+  margin: 10vw;
   background-color: white;
+  padding: 10vw;
 }
 
 /*********************************************************************************************************/
