--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,15 @@ a {
   text-decoration: none;
 }
 
-
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
 
 .bored-bar {
   width: 80vw;
@@ -47,7 +55,11 @@ a {
 
 }
 
-
+.x {
+  /* position: absolute; */
+  float: right;
+  z-index: 1;
+}
 
 
 body {
@@ -146,7 +158,7 @@ grid-template-areas:
 .modal > div {
   width: 60vw;
   min-width: 200px;
-  margin: 10vw;
+  margin: 10vw auto;
   background-color: white;
   padding: 10vw;
 }
