--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,11 @@
 
 /* FORM-BLOCK */
 .form-block {
-  width: 500px;
+  width: 460px;
   height: 300px;
-  
+  border: 3px rgb(123, 63, 0) solid;
+  border-radius: 3px;
+  margin: auto;
 }
 .form-block input {
   height: 20px;
@@ -55,5 +57,24 @@
 }
 
 .form-block button {
-  height: 20px;
+  width: 80px;
+  height: 30px;
+  font-size: 14px;
+  border: 3px solid orangered;
+  border-radius: 3px;
+  color: white;
+  background-color: rgb(123, 63, 0);
+  text-align: center;
+  margin: 10px 27px;
+  font-weight: 700;
+}
+
+.registerBtn {
+  float: right;
+
+
+}
+
+.loginBtn {
+  float: left;
 }
