--- a/src/App.css
+++ b/src/App.css
@@ -8,34 +8,19 @@
   pointer-events: none;
 }
 
-.App-header {
-  /* background-color: #282c34; */
-  /* min-height: 100vh; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* font-size: calc(10px + 2vmin); */
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 .App-logo {
   height: 100px;
 }
 
 /* className="App-logo" */
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 
 /* FORM-BLOCK */
