--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-
-
-
+@import url('https://fonts.googleapis.com/css?family=Arbutus|Holtwood+One+SC|Smokum|Wellfleet&display=swap');
+/* font-family: 'Holtwood One SC', serif; */
+/* font-family: 'Wellfleet', cursive; */
+/* font-family: 'Smokum', cursive; */
+/* font-family: 'Arbutus', cursive; */
 
 
 progress {
@@ -43,6 +45,18 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  /* font-family: 'Holtwood One SC', serif; */
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
+  display: block;
+  font-size: 4em;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bolder;
+}
+
 h2 {
   display: block;
   font-size: 1.5em;
@@ -56,8 +70,6 @@ h2 {
 .bored-bar {
   width: 80vw;
   margin: 0 10vw;
-
-
 }
 
 .x {
@@ -93,17 +105,18 @@ body {
   width: 100vw;
   height: 100vh;
   grid-template-rows: 100px 40px auto 100px;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 100px calc(100vw - 200px) 100px;
+  background-color: orangered;
   /* justify-content: space-evenly; */
   /* justify-content: space-around; */
   grid-gap: 0;
   /* background-color: #2196F3; */
   padding: 0;
 grid-template-areas:
-  ' logo header '
-  ' nav nav '
-  ' main main '
-  ' footer footer ';
+  ' logo header . '
+  ' nav nav nav'
+  ' main main main '
+  ' footer footer footer';
   grid-gap: 0;
 }
 
@@ -116,7 +129,7 @@ grid-template-areas:
 
 .grid-header {
   grid-area: header;
-  background-color: orangered;
+  text-align: center;
 }
 
 /*********************************************************************************************************/
@@ -128,7 +141,7 @@ grid-template-areas:
 
 .grid-logo {
   grid-area: logo;
-  background-color: orangered;
+  /* background-color: orangered; */
 }
 
 /*********************************************************************************************************/
@@ -180,11 +193,6 @@ grid-template-areas:
   grid-area: main;
   background-color: white;
   text-align: center;
-}
-
-.chiliSection > section > img {
-  height: 60px;
-  width: 30px;
 }
 
 /*********************************************************************************************************/
@@ -254,6 +262,18 @@ section > section {
 
 }
 
+.chiliSection {
+  max-width: 100vw
+}
+/* .horizontal-menu {
+  width: calc(100vw - 34px);
+} */
+
+
+.chiliSection > section > img {
+  height: 60px;
+  width: 30px;
+}
 
 .chiliBtn {
   display: inline-block;
@@ -332,6 +352,35 @@ section > section {
 }
  
 .scroll-menu-arrow {
-  padding: 20px;
+  padding: 0px;
   cursor: pointer;
+  /* font-family: 'Holtwood One SC', serif; */
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
+  font-size: 60px
+}
+
+
+@media screen and (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+    grid-template-rows: 100px 40px auto 100px;
+    grid-template-columns: 100px calc(100vw - 100px);
+    background-color: orangered;
+    /* justify-content: space-evenly; */
+    /* justify-content: space-around; */
+    grid-gap: 0;
+    /* background-color: #2196F3; */
+    padding: 0;
+  grid-template-areas:
+    ' logo header '
+    ' nav nav '
+    ' main main '
+    ' footer footer';
+    grid-gap: 0;
+  }
+  h1 {
+    font-size: 2em;
+  }
 }
