--- a/src/index.css
+++ b/src/index.css
@@ -48,23 +48,23 @@ a {
 h1 {
   /* font-family: 'Holtwood One SC', serif; */
   font-family: 'Smokum', 'Times New Roman', Times, serif;
-  display: block;
+  /* display: block; */
   font-size: 4em;
   margin-block-start: 0em;
   margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  /* margin-inline-start: 0px; */
+  /* margin-inline-end: 0px; */
   font-weight: bolder;
 }
 
 h2 {
-  display: block;
+  /* display: block; */
   font-size: 1.5em;
   margin-block-start: 0em;
   margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold;
+  /* margin-inline-start: 0px; */
+  /* margin-inline-end: 0px; */
+  /* font-weight: bold; */
 }
 
 .bored-bar {
@@ -360,19 +360,16 @@ section > section {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .grid-container {
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-rows: 100px 40px auto 100px;
+    /* display: grid; */
+    /* width: 100vw; */
+    /* height: 100vh; */
+    /* grid-template-rows: 100px 40px auto 100px; */
     grid-template-columns: 100px calc(100vw - 100px);
-    background-color: orangered;
-    /* justify-content: space-evenly; */
-    /* justify-content: space-around; */
-    grid-gap: 0;
-    /* background-color: #2196F3; */
-    padding: 0;
+    /* background-color: orangered; */
+    /* grid-gap: 0; */
+    /* padding: 0; */
   grid-template-areas:
     ' logo header '
     ' nav nav '
@@ -382,5 +379,8 @@ section > section {
   }
   h1 {
     font-size: 2em;
+  }
+  h2 {
+    font-size: 1em;
   }
 }
