--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,11 @@
 /* FORM-BLOCK */
 .form-block {
   width: 460px;
-  height: 300px;
-  border: 3px rgb(123, 63, 0) solid;
+  height: 240px;
+  border: 5px #000 solid;
   border-radius: 3px;
   margin: 20px auto;
+  background-color: #fff;
 }
 
 .form-block input {
