--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,10 @@ grid-template-areas:
   grid-area: main;
   background-color: white;
   text-align: center;
+  background-image: url('./tiedye.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /*********************************************************************************************************/
@@ -204,7 +208,9 @@ grid-template-areas:
 
 .grid-footer {
   grid-area: footer;
-  background-color: orangered;
+  color: white;
+  /* font-weight: 400; */
+  background-color: rgb(123, 63, 0);
   bottom: 0;
   text-align: right;
   padding: 40px 0 0 0;
@@ -335,6 +341,8 @@ section > section {
   width: 100px;
 }
 
+
+
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           HORIZONTAL      ***************************************/
@@ -396,4 +404,14 @@ section > section {
   .App-logo {
     height: 60px;
   }
+}
+
+
+.form {
+  background-color: white;
+}
+
+#title {
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
+  font-size: 2em;
 }
