--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,23 @@
     transform: rotate(360deg);
   }
 } */
-
+.about {
+  padding: 20px;
+}
 
 /* FORM-BLOCK */
+
+.home {
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  margin-top: 0px;
+  background-image: url('./tiedye.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .form-block {
   width: 460px;
   height: 240px;
@@ -71,8 +85,65 @@
 }
 
 @media screen and (max-width: 500px) {
+  .home {
+    /* height: 100%; */
+    width: 96vw;
+    padding: 2vw;
+    /* margin-top: 0px; */
+    /* background-image: url('./tiedye.jpg'); */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    /* background-position: center; */
+  }
   
+  .form-block {
+    width: 90vw;
+    /* height: 240px; */
+    /* border: 5px #000 solid; */
+    /* border-radius: 3px; */
+    /* margin: 20px auto; */
+    /* background-color: #fff; */
+  }
+  
+  .form-block input {
+    /* height: 20px; */
+    width: 80vw;
+    /* border: 1px solid rgb(123, 63, 0); */
+    /* border-radius: 3px; */
+    /* margin-top: 10px; */
+  
+  
+  }
+  
+  .form-block button, .saveBtn {
+    width: 80px;
+    height: 30px;
+    font-size: 14px;
+    border: 3px solid orangered;
+    border-radius: 3px;
+    color: white;
+    background-color: rgb(123, 63, 0);
+    text-align: center;
+    margin: 10px 27px;
+    font-weight: 700;
+  }
+  
+  .registerBtn {
+    float: right;
+  
+  
+  }
+  
+  .loginBtn {
+    float: left;
+  }
+  
+  .errorNotification {
+    height: 40px;
+  }
   .App-logo {
     height: 60px;
 }
 }
+
+
