--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,8 @@ h1 {
 h2 {
   /* display: block; */
   font-size: 1.5em;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
+  margin-block-start: .5em;
+  margin-block-end: .5em;
   /* margin-inline-start: 0px; */
   /* margin-inline-end: 0px; */
   /* font-weight: bold; */
