--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -13,9 +13,15 @@
   }
   
   @media screen and (max-width: 500px) {
-    /* .column {
-      flex: 1;
-    } */
+    .box1 {
+        width: 100vw;
+        display: block;
+        float: none;
+    }
+    .box2 {
+      width: 100vw;
+      display: block;
+    }
   }
 
 
