--- a/src/index.css
+++ b/src/index.css
@@ -351,7 +351,9 @@ section > section {
     ' footer footer';
     grid-gap: 0;
   }
-
+  .grid-nav {
+    text-align: center;
+  }
   .grid-footer {
     padding: 10px 0 0 0;
   }
