--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -53,16 +53,45 @@
 
 
   .bored-bar {
-    width: calc(100vw - 400px);
-    margin: 20px 50px;
+    width: calc(100vw - 320px);
+    margin: 20px 10px;
   }
 
 
   .chalk {
       height: 5px;
-      width: calc(100vw - 400px)
+      width: calc(100vw - 300px)
   }
 
+
+.arrow-prev {
+    width: 0; 
+    height: 0; 
+    border-top: 40px solid transparent;
+    border-bottom: 40px solid transparent; 
+    border-right: 20px solid green; 
+}
+  .arrow-next {
+    width: 0; 
+  height: 0; 
+  border-top: 40px solid transparent;
+  border-bottom: 40px solid transparent;
+  border-left: 20px solid red;
+  }
+  .arrow-prev-small {
+    width: 0; 
+    height: 0; 
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent; 
+    border-right: 20px solid green; 
+}
+  .arrow-next-small {
+    width: 0; 
+  height: 0; 
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-left: 20px solid red;
+  }
   @media screen and (max-width: 500px) {
     .box1 {
         width: 100vw;
