clean up Form.css, streamline code to fit new design

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,9 @@ body {
 *:focus {
   outline: 0;
 }
-
+button {
+  background-color: transparent;
+}
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           GRID            ***************************************/
