--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -15,11 +15,51 @@
 /***************************************           CHILI           ***************************************/
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
-button {
-    background-color: transparent;
-  }
-  
-  ul {
+
+
+
+.toggleOn {
+    background-color: rgb(255, 69, 0, .2);
+}
+
+.chiliSection {
+    max-width: 100vw
+}
+
+.spiceSection {
+    display: inline-block;
+    margin: 0 10px;
+    margin-block-end: -6px;
+}
+
+.chiliSection > section, .chiliSection > button { 
+    height: 90px;
+    width: 100px;
+}
+.spiceSection > section, .spiceSection > button { 
+    height: 80px;
+    width: 100px;
+    top: 0;
+}
+/* .chiliSection > section, .spiceSection > section { */
+section > section {
+    margin-block-start: 6px;
+    font-weight: 600;
+    text-align: center;
+}
+.spiceSection > section { 
+    font-size: 14px;
+}
+.chiliSection > section {
+    font-size: 11px;
+}
+
+.chiliSection img {
+    height: 60px;
+    width: 60px;
+}
+
+.spiceSection ul {
     display: block;
     list-style-type: disc;
     margin-block-start: .5em;
@@ -30,197 +70,104 @@ button {
     text-align: left;
     font-size: 10px;
     font-weight: 200;
-  }
-  
-  section > section {
-    margin-block-start: 6px;
-    /* margin-block-end: -6px; */
-    font-size: 18px;
-    font-weight: 600;
-    /* margin-top: 5px; */
-    font-size: 14px;
-    text-align: center;
-  }
-  
-  .toggleOn {
-    background-color: rgb(255, 69, 0, .2);
-    /* z-index: -1; */
-  }
-  
-  
-  .spiceSection, .extraSection, .vinegarSection  {
+}
+
+.chiliBtn, .selectBtn {
     display: inline-block;
-    margin: 0 10px;
-    margin-block-end: -6px;
-  }
-  
-  .chiliSection > section, .chiliSection > button { 
-    height: 90px;
-    width: 100px;
-  }
-  
-  .chiliSection > button, .spiceSection > button, .extraSection > button, .vinegarSection > button {
+    position: relative;
+    z-index: 1;
+    border-radius: 15px;
+    margin-bottom: -10px;    
     position: absolute;
     border: none;
-  
-  }
-  
-  .chiliSection {
-    max-width: 100vw
-  }
+}
 
-  
-  .chiliSection > section > img {
-    height: 60px;
-    width: 60px;
-  }
-  
-  .chiliBtn {
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    border-radius: 15px;
-    margin-bottom: -10px;
-    /* margin-left: -50px; */
-  }
-  
-  .selectBtn {
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    border-radius: 15px;
-    margin-bottom: -10px;
+.selectBtn {
     margin-left: 0px;
     padding: 0;
-  }
-  
-  .chiliSection > section {
-    /* background-color: purple; */
-    /* display: inline-block; */
-    text-align: center; 
-    /* padding: 10px; */
-    font-size: 10px;
-    /* margin-left:-80px; */
-  }
-  
-  .spiceSection > section, .spiceSection > button { 
-    /* background-color: red; */
-    /* background-color: green; */
-    /* border: none; */
-    /* padding: 10px; */
-    height: 80px;
-    width: 100px;
-    top: 0;
-  }
-  
-  
-  
-  .extraSection > section, .extraSection > button { 
-    /* background-color: blue; */
-    /* border: none; */
-    /* padding: 10px; */
-    text-align: center;
-    height: 30px;
-    width: 100px;
-  }
-  
-  .vinegarSection > section, .vinegarSection > button { 
-    /* background-color: yellow; */
-    /* border: none; */
-    /* padding: 10px; */
-    text-align: center;
-    height: 30px;
-    width: 100px;
-  }
-  
-  .spiceSection img, .vinegarSection img {
-    height: 50px;
-    width: 50px;
-  }
+}
 
+progress {
+-webkit-appearance: none;
+appearance: none;
+}
+/* @-webkit-keyframes animate-stripes {
+100% { background-position: -100px 0px; }
+}
 
-  progress {
-    -webkit-appearance: none;
-    appearance: none;
-  }
-  /* @-webkit-keyframes animate-stripes {
-    100% { background-position: -100px 0px; }
-  }
-  
-  @keyframes animate-stripes {
-    100% { background-position: -100px 0px; }
-  } */
-  
-  progress[value]::-webkit-progress-bar {
-    background-color: #eee;
-    border-radius: 2px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-    /* -webkit-animation: animate-stripes 5s linear infinite;
-    animation: animate-stripes 5s linear infinite; */
-  }
-  
-  progress[value]::-webkit-progress-value {
-    background-image:
-         /* -webkit-linear-gradient(-45deg, 
-                                 transparent 33%, rgba(0, 0, 0, .1) 33%, 
-                                 rgba(0,0, 0, .1) 66%, transparent 66%), */
-         -webkit-linear-gradient(top, 
-                                 rgba(255, 255, 255, .25), 
-                                 rgba(0, 0, 0, .25)),
-         -webkit-linear-gradient(left, rgb(255, 255, 0, 0), yellow, yellow, orange, #f44, red);
-  
-      border-radius: 2px; 
-      background-size: 35px 20px, 100% 100%, 100% 100%;
-      transition: width .5s linear;
-  
-  }
+@keyframes animate-stripes {
+100% { background-position: -100px 0px; }
+} */
 
-  .bored-bar {
-    width: calc(100vw - 320px);
-    margin: 20px 10px;
-  }
+progress[value]::-webkit-progress-bar {
+background-color: #eee;
+border-radius: 2px;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+/* -webkit-animation: animate-stripes 5s linear infinite;
+animation: animate-stripes 5s linear infinite; */
+}
+
+progress[value]::-webkit-progress-value {
+background-image:
+        /* -webkit-linear-gradient(-45deg, 
+                                transparent 33%, rgba(0, 0, 0, .1) 33%, 
+                                rgba(0,0, 0, .1) 66%, transparent 66%), */
+        -webkit-linear-gradient(top, 
+                                rgba(255, 255, 255, .25), 
+                                rgba(0, 0, 0, .25)),
+        -webkit-linear-gradient(left, rgb(255, 255, 0, 0), yellow, yellow, orange, #f44, red);
+
+    border-radius: 2px; 
+    background-size: 35px 20px, 100% 100%, 100% 100%;
+    transition: width .5s linear;
+}
+
+.bored-bar {
+width: calc(100vw - 320px);
+margin: 20px 10px;
+}
 
 .chalk-bottom {
-    height: 5px;
-    width: calc(100vw - 0px);
-    position: relative;
-    top: -12px;
+height: 5px;
+width: calc(100vw - 0px);
+position: relative;
+top: -12px;
 }
-  .chalk {
-      height: 5px;
-      width: calc(100vw - 300px)
-  }
+.chalk {
+    height: 5px;
+    width: calc(100vw - 300px)
+}
 
 .arrow-prev, .arrow-next {
-    width: 0; 
-    height: 0; 
+width: 0; 
+height: 0; 
 }
 
 .arrow-prev {
-    border-right: 20px solid green; 
-    margin-left: 10px;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent; 
+border-right: 20px solid green; 
+margin-left: 10px;
+border-top: 50px solid transparent;
+border-bottom: 50px solid transparent; 
 }
 .arrow-next {
-    border-left: 20px solid red;
-    margin-right: 10px;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
+border-left: 20px solid red;
+margin-right: 10px;
+border-top: 50px solid transparent;
+border-bottom: 50px solid transparent;
 }
-  @media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
     .box1 {
         width: 100vw;
         display: block;
         float: none;
     }
     .box2 {
-      width: 100vw;
-      display: block;
-      margin-bottom: auto;
+        width: 100vw;
+        display: block;
+        margin-bottom: auto;
     }
     .bored-bar {
         width: calc(100vw - 40px);
         margin: 20px 0;
-      }
-  }
+    }
+}
