--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -170,4 +170,7 @@ border-bottom: 50px solid transparent;
         width: calc(100vw - 40px);
         margin: 20px 0;
     }
+    .chalk {
+        width: 100vw;
+    }
 }
