complete new phase of styling

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,12 +1,13 @@
   .box1 {
       float: left;
-      width: 300px;
+      width: 250px;
       display: inline-block;
   }
   .box2 {
-    width: calc(100vw - 300px);
+    width: calc(100vw - 350px);
     display: inline-block;
     /* margin-bottom: 20px; */
+    /* margin-right: 100px; */
   }
   
 /*********************************************************************************************************/
@@ -87,6 +88,13 @@ section > section {
     padding: 0;
 }
 
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************         PROGRESS          ***************************************/
+/***************************************              BAR          ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 progress {
 -webkit-appearance: none;
 appearance: none;
@@ -123,10 +131,18 @@ background-image:
 }
 
 .bored-bar {
-width: calc(100vw - 320px);
+width: calc(100% - 50px);
 margin: 20px 10px;
 }
 
+
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           CHALK           ***************************************/
+/***************************************           LINE            ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 .chalk-bottom {
 height: 5px;
 width: calc(100vw - 0px);
@@ -135,9 +151,15 @@ top: -12px;
 }
 .chalk {
     height: 5px;
-    width: calc(100vw - 300px)
+    width: calc(100% - 0px)
 }
 
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           SCROLL          ***************************************/
+/***************************************           BAR             ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 .arrow-prev, .arrow-next {
 width: 0; 
 height: 0; 
@@ -155,6 +177,13 @@ margin-right: 10px;
 border-top: 50px solid transparent;
 border-bottom: 50px solid transparent;
 }
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************         MOBILE            ***************************************/
+/***************************************         FRIENDLY          ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 @media screen and (max-width: 500px) {
     .box1 {
         width: 100vw;
