--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ h1 {
   font-family: 'Smokum', 'Times New Roman', Times, serif;
   /* display: block; */
   font-size: 4em;
-  margin-block-start: 10px;
+  margin-block-start: 40px;
   margin-block-end: 0em;
   /* margin-inline-start: 0px; */
   /* margin-inline-end: 0px; */
@@ -66,12 +66,12 @@ button {
 /*********************************************************************************************************/
 
 .grid-container {
-  background-image: url('woodpanelsheader.png');
+  background-image: url('wood-panel-header.png');
   background-repeat: repeat-x;
   display: grid;
   width: 100vw;
   height: 100vh;
-  grid-template-rows: 120px 40px auto 60px;
+  grid-template-rows: 160px 40px auto 60px;
   grid-template-columns: 100px calc(100vw - 200px) 100px;
   background-color: orangered;
   /* justify-content: space-evenly; */
@@ -110,6 +110,7 @@ grid-template-areas:
 
 .grid-logo {
   grid-area: logo;
+  padding: 30px;
   /* background-color: orangered; */
 }
 
