--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -7,12 +7,22 @@
     float: left;
     width: 250px;
     display: inline-block;
+    text-align: right;
 }
 .box2 {
     width: calc(100vw - 350px);
     display: inline-block;
     /* margin-bottom: 20px; */
     /* margin-right: 100px; */
+}
+
+.box1 ol {
+    margin: 0;
+    text-align: right;
+}
+
+.box1 h2 {
+    text-align: center;
 }
   
 /*********************************************************************************************************/
