--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ h1 {
 
 h2 {
   /* display: block; */
-  font-size: 1.5em;
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
+  font-size: 3em;
   margin-block-start: .5em;
   margin-block-end: .5em;
   /* margin-inline-start: 0px; */
