--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,8 @@ h2 {
   /* display: block; */
   font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 3em;
-  margin-block-start: .5em;
-  margin-block-end: .5em;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
   /* margin-inline-start: 0px; */
   /* margin-inline-end: 0px; */
   /* font-weight: bold; */
