--- a/src/components/Sale.css
+++ b/src/components/Sale.css
@@ -16,13 +16,7 @@
 }
 
 .new-recipe ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1.9em;
-    margin-block-end: .2em;
-    margin-inline-start: 0px;
-    /* margin-inline-end: 0px; */
-    /* padding-inline-start: 40px; */
+    margin-block-end: 0em;
 }
 
 .new-recipe li {
