--- a/src/components/Sale.css
+++ b/src/components/Sale.css
@@ -6,7 +6,7 @@
     padding: 0 20px 30px 20px;
 }
 
-.new-recipe > img {
+.chili {
     height: 60px;
     width: 60px;
 }
@@ -27,9 +27,10 @@
     margin-right: 20px;
 }
 
-.show-recipe > img {
+.chalk-line {
     width: 460px;
-    /* margin: 0 auto; */
+    height: 5px;
+    margin: 0 auto;
 }
 
 .show-recipe span {
@@ -38,4 +39,3 @@
     font-family: 'Smokum', 'Times New Roman', Times, serif;
     font-size: 1.5em;
 }
-
