select only one example at a time

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,3 +1,8 @@
+/* #green onion {
+    background-color: purple;
+} */
+
+
 .container {
     width: calc(100vw - 80px);
     /* padding: 0 20px; */
