--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-  /* display: block; */
+  display: block;
   font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 3em;
   margin-block-start: 0em;
@@ -33,7 +33,16 @@ h2 {
   /* margin-inline-end: 0px; */
   /* font-weight: bold; */
 }
-
+h3 {
+  display: inline-block;
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
+  font-size: 2em;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  /* margin-inline-start: 0px; */
+  /* margin-inline-end: 0px; */
+  /* font-weight: bold; */
+}
 
 
 .x {
