--- a/src/index.css
+++ b/src/index.css
@@ -207,35 +207,16 @@ grid-template-areas:
 
 
 
-/*********************************************************************************************************/
-/***************************************                           ***************************************/
-/***************************************           HORIZONTAL      ***************************************/
-/***************************************           SCROLL          ***************************************/
-/***************************************                           ***************************************/
-/*********************************************************************************************************/
-.menu-item {
-  padding: 0 40px;
-  margin: 5px 10px;
-  user-select: auto;
-  cursor: pointer;
-  border: none;
-}
-.menu-item-wrapper.active {
-  border: none;
-  /* border: 1px blue solid; */
-}
-.menu-item.active {
-  border: 1px green solid;
-}
- 
-.scroll-menu-arrow {
-  padding: 0px;
-  cursor: pointer;
-  /* font-family: 'Holtwood One SC', serif; */
-  font-family: 'Smokum', 'Times New Roman', Times, serif;
-  font-size: 60px
-}
 
+
+
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           MEDIA           ***************************************/
+/***************************************           QUERY           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 
 @media screen and (max-width: 500px) {
   .grid-container {
