--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,12 @@ grid-template-areas:
     height: 60px;
   }
 }
-
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           SHOW            ***************************************/
+/***************************************           MODAL           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 
 .form {
   background-color: white;
@@ -262,4 +267,48 @@ grid-template-areas:
 #title {
   font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 2em;
+}
+
+
+
+.new-recipe {
+  width: calc(500px - 40px);
+  margin: 0 auto;
+  /* background-color: yellow; */
+  margin-bottom: 30px;
+  padding: 0 20px 30px 20px;
+}
+
+.chili {
+  height: 60px;
+  width: 60px;
+}
+
+.new-recipe section {
+  text-align: right;
+}
+
+.new-recipe ul {
+  margin-block-end: 0em;
+}
+
+.new-recipe li {
+  text-align: right;
+}
+
+.show-recipe {
+  margin-right: 20px;
+}
+
+.chalk-line {
+  width: 460px;
+  height: 5px;
+  margin: 0 auto;
+}
+
+.show-recipe span {
+  float: left;
+  margin-left: 20px;
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
+  font-size: 1.5em;
 }
