--- a/src/index.css
+++ b/src/index.css
@@ -284,6 +284,13 @@ grid-template-areas:
   width: 60px;
 }
 
+.new-recipe button {
+  height: 40px;
+  width: calc(30vw - 20px);
+  margin: 10px;
+  border-radius: 3px;
+}
+
 .new-recipe section {
   text-align: right;
 }
