add zindex and positions to footer attributes

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  position: relative;
+  position: absolute;
   z-index: 1;
 }
 
