--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -167,12 +167,14 @@ background-image:
 /***************************************           CHALK           ***************************************/
 /***************************************           LINE            ***************************************/
 /***************************************                           ***************************************/
-/*********************************************************************************************************/
+
+
 .chalk-bottom {
     height: 5px;
     width: calc(100vw - 0px);
     position: relative;
     top: -12px;
+    /* z-index: 500; */
 }
 .chalk {
     height: 5px;
