--- a/src/index.css
+++ b/src/index.css
@@ -196,6 +196,7 @@ grid-template-areas:
   /* background-color: rgb(123, 63, 0); */
   /* bottom: 0; */
   /* text-align: right; */
+  /* z-index: 500; */
   padding: 0 0 0 0;
 }
 
