--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,15 @@ h1 {
   /* margin-inline-start: 0px; */
   /* margin-inline-end: 0px; */
   font-weight: bolder;
-  letter-spacing: 2px;
-  text-shadow: 0 0 2px rgb(37, 29, 29);
+  letter-spacing: 3px;
+  /* color: black; */
+  color: rgb(0, 0, 0);
+  /* text-shadow: 0px 0px 2px rgb(0, 0, 0, .5), -1px -1px 2px rgb(0, 0, 0, .5) ; */
+  text-shadow:
+		-1px -1px 1px rgb(0, 0, 0, .6),
+		1px -1px 1px rgb(0, 0, 0, .5),
+		/* -1px 1px 1px rgb(0, 0, 0, .5), */
+		1px 1px 1px rgb(0, 0, 0, .5);
 }
 
 h2 {
@@ -110,7 +117,6 @@ grid-template-areas:
   grid-area: header;
   text-align: center;
   /* color: orangered; */
-  text-shadow: rgb(253, 118, 76, 0.5);
 }
 
 /*********************************************************************************************************/
